{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Dropper",
            "id": "0cea584b-bf86-46a0-ab83-9e67234d1f70",
            "actions": [
                {
                    "name": "DropBall",
                    "type": "Button",
                    "id": "9408c5ae-0191-4a5e-b7a0-973811ade1bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f4cfa4de-d359-453c-8764-0a0211a2dea2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "561db597-ebd3-40c6-bcd1-3b36ab17c4b1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "957c3edc-42c0-47de-9723-7d02f96fdbd0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06a0b4e2-b18d-4936-a53c-a12bc5fdc169",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a958f5d-8e54-4ca2-84cd-c1a8a59bf79e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "2110518c-8f43-4528-b7ce-560d867b1f6b",
            "actions": [
                {
                    "name": "ExitMenu",
                    "type": "Button",
                    "id": "d956a3c4-e355-4994-8d26-b75c0d3865ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "083b31b8-a9e0-4e73-9ad3-fe3698ee7aa1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffd80063-744a-4a4c-aab0-8bacd2ce33af",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a2d0be2-5201-4ced-a805-0e96038a32c3",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}