{
    "name": "UIControls",
    "maps": [
        {
            "name": "UI",
            "id": "a47fbc60-fda9-499e-8ad9-e4de53c26436",
            "actions": [
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "9d98814d-7f43-41d3-906c-8f6e595b4100",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenDroppers",
                    "type": "Button",
                    "id": "ef235293-33ff-4b27-a925-991e2210d965",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47f39aa6-0c08-4729-87ae-35d9fdf50dda",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce121eac-503d-4ea8-ba94-e22aa48a085c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b308de4-a0e9-41f7-8c95-3da60879b2ea",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDroppers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23307caf-1fc8-4840-91dc-ac0599f21d85",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDroppers",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}